; ModuleID = '/home/carl/AnghaBench/linux/tools/testing/selftests/net/extr_nettest.c_tcp_md5_remote.c'
source_filename = "/home/carl/AnghaBench/linux/tools/testing/selftests/net/extr_nettest.c_tcp_md5_remote.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sockaddr_in = type { i32, i32, i8* }
%struct.sockaddr_in6 = type { i32, i32, i8* }
%struct.sock_args = type { i32, i32, %struct.TYPE_2__, i32 }
%struct.TYPE_2__ = type { i32, i32 }

@__const.tcp_md5_remote.sin = private unnamed_addr constant %struct.sockaddr_in { i32 129, i32 0, i8* null }, align 8
@__const.tcp_md5_remote.sin6 = private unnamed_addr constant %struct.sockaddr_in6 { i32 128, i32 0, i8* null }, align 8
@.str = private unnamed_addr constant [24 x i8] c"unknown address family\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, %struct.sock_args*)* @tcp_md5_remote to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @tcp_md5_remote(i32 %0, %struct.sock_args* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca %struct.sock_args*, align 8
  %6 = alloca %struct.sockaddr_in, align 8
  %7 = alloca %struct.sockaddr_in6, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store %struct.sock_args* %1, %struct.sock_args** %5, align 8
  %10 = bitcast %struct.sockaddr_in* %6 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 8 %10, i8* align 8 bitcast (%struct.sockaddr_in* @__const.tcp_md5_remote.sin to i8*), i64 16, i1 false)
  %11 = bitcast %struct.sockaddr_in6* %7 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 8 %11, i8* align 8 bitcast (%struct.sockaddr_in6* @__const.tcp_md5_remote.sin6 to i8*), i64 16, i1 false)
  %12 = load %struct.sock_args*, %struct.sock_args** %5, align 8
  %13 = getelementptr inbounds %struct.sock_args, %struct.sock_args* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  switch i32 %14, label %39 [
    i32 129, label %15
    i32 128, label %27
  ]

15:                                               ; preds = %2
  %16 = load %struct.sock_args*, %struct.sock_args** %5, align 8
  %17 = getelementptr inbounds %struct.sock_args, %struct.sock_args* %16, i32 0, i32 3
  %18 = load i32, i32* %17, align 4
  %19 = call i8* @htons(i32 %18)
  %20 = getelementptr inbounds %struct.sockaddr_in, %struct.sockaddr_in* %6, i32 0, i32 2
  store i8* %19, i8** %20, align 8
  %21 = load %struct.sock_args*, %struct.sock_args** %5, align 8
  %22 = getelementptr inbounds %struct.sock_args, %struct.sock_args* %21, i32 0, i32 2
  %23 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %22, i32 0, i32 1
  %24 = load i32, i32* %23, align 4
  %25 = getelementptr inbounds %struct.sockaddr_in, %struct.sockaddr_in* %6, i32 0, i32 1
  store i32 %24, i32* %25, align 4
  %26 = bitcast %struct.sockaddr_in* %6 to i8*
  store i8* %26, i8** %8, align 8
  store i32 16, i32* %9, align 4
  br label %42

27:                                               ; preds = %2
  %28 = load %struct.sock_args*, %struct.sock_args** %5, align 8
  %29 = getelementptr inbounds %struct.sock_args, %struct.sock_args* %28, i32 0, i32 3
  %30 = load i32, i32* %29, align 4
  %31 = call i8* @htons(i32 %30)
  %32 = getelementptr inbounds %struct.sockaddr_in6, %struct.sockaddr_in6* %7, i32 0, i32 2
  store i8* %31, i8** %32, align 8
  %33 = load %struct.sock_args*, %struct.sock_args** %5, align 8
  %34 = getelementptr inbounds %struct.sock_args, %struct.sock_args* %33, i32 0, i32 2
  %35 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %34, i32 0, i32 0
  %36 = load i32, i32* %35, align 4
  %37 = getelementptr inbounds %struct.sockaddr_in6, %struct.sockaddr_in6* %7, i32 0, i32 1
  store i32 %36, i32* %37, align 4
  %38 = bitcast %struct.sockaddr_in6* %7 to i8*
  store i8* %38, i8** %8, align 8
  store i32 16, i32* %9, align 4
  br label %42

39:                                               ; preds = %2
  %40 = call i32 @log_error(i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str, i64 0, i64 0))
  %41 = call i32 @exit(i32 1) #4
  unreachable

42:                                               ; preds = %27, %15
  %43 = load i32, i32* %4, align 4
  %44 = load i8*, i8** %8, align 8
  %45 = load i32, i32* %9, align 4
  %46 = load %struct.sock_args*, %struct.sock_args** %5, align 8
  %47 = getelementptr inbounds %struct.sock_args, %struct.sock_args* %46, i32 0, i32 1
  %48 = load i32, i32* %47, align 4
  %49 = call i64 @tcp_md5sig(i32 %43, i8* %44, i32 %45, i32 %48)
  %50 = icmp ne i64 %49, 0
  br i1 %50, label %51, label %52

51:                                               ; preds = %42
  store i32 -1, i32* %3, align 4
  br label %53

52:                                               ; preds = %42
  store i32 0, i32* %3, align 4
  br label %53

53:                                               ; preds = %52, %51
  %54 = load i32, i32* %3, align 4
  ret i32 %54
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i8* @htons(i32) #2

declare dso_local i32 @log_error(i8*) #2

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #3

declare dso_local i64 @tcp_md5sig(i32, i8*, i32, i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
